--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Каталог товаров</title>
+    <title>Catalog</title>
+    <link rel="icon" href="T_T.png" type="image/png">
 </head>
 <body>
     <header id="header">
+    <div class="container">
+        <a class="logo-link" href="index.html">
+            <img src="T_T.png" alt="Logo" class="left-image">
+        </a>
         <div class="auth-buttons">
-            <a class="auth-link" href="sign-in.html">Sign In</a>
-            <a class="auth-link" href="log-in.html">Log In</a>
+            <a class="auth-link" href="sign-in.html">Sign up</a>
+            <a class="auth-link" href="log-in.html">Login</a>
         </div>
-        <h1 class="header-title">Добро пожаловать в наш каталог товаров!</h1>
+    </div>
     </header>
+
     <main id="main-content">
         <section class="product-catalog">
-            <h2 class="catalog-title">Наши товары</h2>
+
+            
             <div class="product-item">
                 <a href="product1.html">
-                    <img class="product-image" src="https://via.placeholder.com/150" alt="Товар 1">
-                    <h3 class="product-name">Товар 1</h3>
-                    <p class="product-description">Описание товара 1.</p>
+                    <img src="vitamins.png" width="100" height="100"></img>
+                    <span class="product-name">Vitamins and dietary supplements</span>
                 </a>
             </div>
             <div class="product-item">
                 <a href="product2.html">
-                    <img class="product-image" src="https://via.placeholder.com/150" alt="Товар 2">
-                    <h3 class="product-name">Товар 2</h3>
-                    <p class="product-description">Описание товара 2.</p>
+                    <img src="medical.png" width="100" height="100"></img>
+                    <span class="product-name">Medical devices</span>
                 </a>
             </div>
+            <div class="product-item">
+                <a href="product3.html">
+                   <img src="beauty.png" width="100" height="100"></img>
+                    <span class="product-name">Beauty and hygiene</span>
+                </a>
+            </div>
+
         </section>
     </main>
     <footer id="footer">
-        <p class="footer-text">© 2024 Все права защищены.</p>
+        <p class="footer-text">Copyright © 2024 BAI Pharm. All rights reserved.</p>
     </footer>
 </body>
 </html>
